# xx-shell

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  Step 1: Set up the project structure  Step 3: Create the main script (`uv.py`)  Step 4: Run the script  index.html  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements.txt  sitemap.xml
.github/workflows/: deploy-docs.yml  tests.yml
ExecutionPlan/: index.html
InitialProposal/: index.html
aider_guide/: index.html
api/core/: index.html
api/plugins/: index.html
api/session/: index.html
assets/prompts/logo_flux.1-dev/: index.html
coding_conventions/: index.html
commands/: index.html
commands/core/: index.html
commands/plugins/: index.html
development/contributing/: index.html
development/setup/: index.html
development/testing/: index.html
development/testing_strategy/: index.html
docs/: aider_guide.md  coding_conventions.md  features.md  index.md  mcp_python_sdk.md  mcp_specification.md  xx_mcp_integration.md
docs/.assistant_docs/: ExecutionPlan.md  InitialProposal.md  TestingStrategy.md  TestingStrategyPrompt.md  coding_conventions.md  uv_project_management.md
docs/api/: core.md  plugins.md  session.md
docs/commands/: core.md  index.md  plugins.md
docs/development/: contributing.md  setup.md  testing.md  testing_strategy.md
docs/getting-started/: configuration.md  installation.md
features/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
mcp-python-sdk/: README.md  pyproject.toml
mcp-python-sdk/src/mcp/: __init__.py
mcp_python_sdk/: index.html
mcp_specification/: index.html
search/: search_index.json
src/xx_aider/: __init__.py
src/xx_shell/: __init__.py  main.py  version.py
tests/: __init__.py  conftest.py  test_basic.py
tests/core/: test_shell.py
tests/integration/: test_mcp_integration.py
tests/session/: test_session_manager.py
uv_project_management/: index.html
xx_mcp_integration/: index.html
(+8 files in other folders)
