[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-python-sdk"
version = "0.1.0"
description = "Model Context Protocol Python SDK"
authors = [
    {name="Your Name", email="your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "aiohttp>=3.8.0",
    "xx-shell-mode>=0.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.md"]
